syntax = "proto3";

option go_package = "lab/lider";

package LJ;

message GameReq{
    string entryMsg = 1;
}

message GameResp{
    string gameMsg = 1;
    int64 nroJugador = 2;
}

message NumPasosReq{
    int64 PlayMsg = 1;
    int64 nroJugador = 2;
    int64 total = 3;
    int64 ronda = 4;
}

message NumPasosResp{
    int64 stateMsg = 1;
}

message E2ConnReq{
    int64 nroJugador = 1;
}

message E2ConnResp{
    int64 nroGroup = 1;
}

message Etapa2Req{
    int64 nroJugador = 1;
    int64 numero = 2;
}

message Etapa2Resp{
    int64 stateMsg = 1;
}

service LiderJugadorService{
    rpc RequestGame(GameReq) returns (GameResp);
    rpc EtapaUno(NumPasosReq) returns (NumPasosResp);
    rpc Etapa2Conn(E2ConnReq) returns (E2ConnResp);
    rpc Etapa2(Etapa2Req) returns (Etapa2Resp);
}